--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,8 +30,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.BootsFaces-OSP-0.9.0-dist.jar=D:\\ANA\\BootsFaces-OSP-0.9.0-dist.jar
-file.reference.BootsFaces-OSP-1.0.0-dist.jar=D:\\ANA\\BootsFaces-OSP-1.0.0-dist.jar
 file.reference.gson-2.2.2.jar=D:\\ANA\\gson-2.2.2.jar
 file.reference.javax.ws.rs-api-2.0.jar=D:\\ANA\\javax.ws.rs-api-2.0.jar
 includes=**
@@ -48,9 +46,7 @@ javac.classpath=\
     ${file.reference.gson-2.2.2.jar}:\
     ${libs.MySQLDriver.classpath}:\
     ${libs.jsf20.classpath}:\
-    ${file.reference.BootsFaces-OSP-0.9.0-dist.jar}:\
-    ${libs.jstl.classpath}:\
-    ${file.reference.BootsFaces-OSP-1.0.0-dist.jar}
+    ${libs.jstl.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
