--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,8 +30,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.gson-2.2.2.jar=D:\\ANA\\gson-2.2.2.jar
-file.reference.javax.ws.rs-api-2.0.jar=D:\\ANA\\javax.ws.rs-api-2.0.jar
+file.reference.gson-2.2.2.jar=../../ANA/gson-2.2.2.jar
+file.reference.javax.ws.rs-api-2.0.jar=../../ANA/javax.ws.rs-api-2.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -90,6 +90,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=TesteWS.war
+war.name=HelpPet.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
